# llm-attack-runner

./: .gitignore  CLAUDE.md  LICENSE  README.md  cli.py  pyproject.toml  report.py  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  runner.py  scorer.py
.github/workflows/: ci.yml
payloads/: __init__.py  data_extraction.json  jailbreak.json  prompt_injection.json  reconnaissance.json  social_engineering.json
tests/: test_payloads.py  test_report.py  test_runner.py  test_scorer.py
